--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "SecretVault/wrapper.js"
   ],
   "author": "Steph",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@nillion/nilql": "^0.0.0-alpha.5",
     "did-jwt": "^8.0.6",
