--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nillion-sv-wrappers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Wrappers for Nillion's Secret Vault and nilQL",
   "main": "index.js",
   "type": "module",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@nillion/nilql": "^0.0.0-alpha.5",
     "did-jwt": "^8.0.6",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "uuid": "^11.0.5"
   }
 }
