--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./index.js"
+      "import": "./index.js",
+      "require": "./index.cjs"
     }
   },
   "files": [
     "index.js",
+    "index.cjs",
     "nilQl/wrapper.js",
     "SecretVault/wrapper.js"
   ],
