--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.9",
   "description": "Wrappers for Nillion's Secret Vault and nilQL",
   "main": "index.js",
+  "scripts": {
+    "build:cjs": "esbuild index.js --bundle --platform=node --target=node20 --packages=external > dist/index.cjs"
+  },
   "type": "module",
   "exports": {
     ".": {
       "import": "./index.js",
-      "require": "./index.cjs"
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
     "index.js",
-    "index.cjs",
+    "dist/index.cjs",
     "nilQl/wrapper.js",
     "SecretVault/wrapper.js"
   ],
@@ -23,5 +26,8 @@
     "did-jwt": "^8.0.6",
     "dotenv": "^16.4.7",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.0"
   }
 }
